--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2010-10-21 dynup <dynup@ymail.com>
+  * Add all game isos from a directory and view infos about the game(s).
+
 2010-10-15 dynup <dynup@ymail.com>
   * Starting project with the great Qt library.
 
