Log functionality added

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2010-10-23 dynup <dynup@ymail.com>
+  * Log functionality added.
+
 2010-10-21 dynup <dynup@ymail.com>
   * Add all game isos from a directory and view infos about the game(s).
 
