--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2010-10-25 dynup <dynup@ymail.com>
+  * Game info functionality added.
+
 2010-10-23 dynup <dynup@ymail.com>
   * Log functionality added.
 
