--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2010-10-25 dynup <dynup@ymail.com>
+  * StatusBar functionality added.
+
+2010-10-24 dynup <dynup@ymail.com>
   * Game info functionality added.
 
 2010-10-23 dynup <dynup@ymail.com>
