List games in seperate threads and new app icon

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2010-10-26 dynup <dynup@ymail.com>
+  * List games in seperate threads.
+
 2010-10-25 dynup <dynup@ymail.com>
   * List games from WBFS partitions and view infos.
 
