Transfer to hdd added

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2010-10-30 Kai Heitkamp <dynup@ymail.com>
+  * Transfer to hdd added.
+
 2010-10-28 Kai Heitkamp <dynup@ymail.com>
   * Progress bar in HDD tab for additional and compact infos.
 
