Transfer WBFS to image extended

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2010-11-02 Kai Heitkamp <dynup@ymail.com>
+  * Transfer WBFS to image extended.
+
 2010-11-01 Kai Heitkamp <dynup@ymail.com>
   * Transfer WBFS to image added.
   * Some improvements.
