--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2010-11-02 Kai Heitkamp <dynup@ymail.com>
   * Transfer WBFS to image extended.
+  * List game infos (incl. disc cover) from DVD.
 
 2010-11-01 Kai Heitkamp <dynup@ymail.com>
   * Transfer WBFS to image added.
