--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-11-03 Kai Heitkamp <dynup@ymail.com>
+  * Some memory optimizations.
+  * Sort functions.
+  * Workaround for wwts calculate bug.
+  * Version number increase to: 0.5.1
+
 2010-11-02 Kai Heitkamp <dynup@ymail.com>
   * Transfer WBFS to image extended.
   * List game infos (incl. disc cover) from DVD.
