--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2010-11-04 Kai Heitkamp <dynup@ymail.com>
+  * Settings are used now.
+
 2010-11-03 Kai Heitkamp <dynup@ymail.com>
   * Some memory optimizations.
   * Sort functions.
