--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-11-05 Kai Heitkamp <dynup@ymail.com>
+  * Some little improvements and bug fixes.
+  * Version number increase to: 0.6.1
+
 2010-11-04 Kai Heitkamp <dynup@ymail.com>
   * Settings are used now.
   * Some little improvements.
