--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2010-11-05 Kai Heitkamp <dynup@ymail.com>
-  * Some little improvements and bug fixes.
+  * Fill game list models in a new thread.
+  * Some little improvements and bug fixes. (0.6.1)
   * Version number increase to: 0.6.1
 
 2010-11-04 Kai Heitkamp <dynup@ymail.com>
