--- a/README
+++ b/README
@@ -1,8 +1,16 @@
 This document contains important notes for Wii Backup Fusion
 
+
 Look & Feel of Qt applications
 ==============================
 
 You can configure the look & feel of Qt applications, incl. Wii Backup Fusion.
 This contains GUI styles, 3-D effects, fonts, interface settings and so on.
 Use Qt's own setting editor 'qtconfig', it's in "<Qt-Dir>/qt/bin/"!
+
+
+WBFS partitions/hdds
+====================
+
+WiiBaFu needs admin permissions to access WBFS hdds/partitions! Please start
+WiiBaFu with 'sudo WiiBaFu'!
