--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
   * Transfer improved.
   * Autosearch for WIT added.
   * Some little fixes.
+  * Version number increase to: 0.7
 
 2010-11-06 Kai Heitkamp <dynup@ymail.com>
   * Autosearch for wit/wwt added.
