--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 - WIT path configurable in settings
-- Save last path in Files/Load
++ Save last path in Files/Load
 + WBFS column "Container" obsolete
 + Merge WBFS/Slot and File/Partition to "Source"
 
