Configurable WIT path added

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-- WIT path configurable in settings
++ WIT path configurable in settings
 + Save last path in Files/Load
 + WBFS column "Container" obsolete
 + Merge WBFS/Slot and File/Partition to "Source"
