Save column widths added, status bar bug fixed

--- a/TODO
+++ b/TODO
@@ -4,7 +4,7 @@
 + Merge WBFS/Slot and File/Partition to "Source"
 
 + Sort game lists
-- Save column width
++ Save column width
 - Sequenz of columns changeable
 - Activate/deactivate columns in game lists
 - Set indicated columns in settings
