Set indicated columns in settings added

--- a/TODO
+++ b/TODO
@@ -7,7 +7,7 @@
 + Save column width
 - Sequenz of columns changeable
 - Activate/deactivate columns in game lists
-- Set indicated columns in settings
++ Set indicated columns in settings
 
 - Discname OR title (settings, possibly MouseOver -> ToolTip)
 - Titles and Cover language global in settings
