Horizontal lines removed, better for Windows

--- a/TODO
+++ b/TODO
@@ -5,11 +5,10 @@
 
 + Sort game lists
 + Save column width
-- Sequenz of columns changeable
-- Activate/deactivate columns in game lists
++ Sequenz of columns changeable
 + Set indicated columns in settings
-
 - Discname OR title (settings, possibly MouseOver -> ToolTip)
+
 - Titles and Cover language global in settings
 - Convert Files (images) to another format
 - Format WBFS partitions
