--- a/TODO
+++ b/TODO
@@ -7,7 +7,7 @@
 + Save column width
 + Sequenz of columns changeable
 + Set indicated columns in settings
-- Discname OR title (settings, possibly MouseOver -> ToolTip)
++ Busy status
 
 - Titles and Cover language global in settings
 - Convert Files (images) to another format
