Titles and cover languages via settings added

--- a/TODO
+++ b/TODO
@@ -9,7 +9,7 @@
 + Set indicated columns in settings
 + Busy status
 
-- Titles and Cover language global in settings
++ Titles and Cover language global in settings
 - Convert Files (images) to another format
 - Format WBFS partitions
 - Create new WBFS file
