Convert images to another format added

--- a/TODO
+++ b/TODO
@@ -10,7 +10,7 @@
 + Busy status
 
 + Titles and Cover language global in settings
-- Convert Files (images) to another format
++ Convert Files (images) to another format
 + Format WBFS partition
 + Create WBFS file
 
