Download titles from wiitdb.com added

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2010-11-19 Kai Heitkamp <dynup@ymail.com>
+  * Download titles from wiitdb.com
+
 2010-11-18 Kai Heitkamp <dynup@ymail.com>
   * Titles and Cover language global in settings
   * Convert Files (images) to another format
