--- a/TODO
+++ b/TODO
@@ -13,6 +13,7 @@
 + Convert Files (images) to another format
 + Format WBFS partition
 + Create WBFS file
++ Download titles from wiitdb.com
 
 - Compare Files and WBFS
 - Files/WBFS/Infos alterable
