--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2010-11-19 Kai Heitkamp <dynup@ymail.com>
   * Download titles from wiitdb.com
   * Save Settings geometry
+  * Transfer DVD to image
 
 2010-11-18 Kai Heitkamp <dynup@ymail.com>
   * Titles and Cover language global in settings
