Transfer DVD to a specific image file

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2010-11-20 Kai Heitkamp <dynup@ymail.com>
+  * Transfer DVD to a specific image file
+
 2010-11-19 Kai Heitkamp <dynup@ymail.com>
   * Download titles from wiitdb.com
   * Save Settings geometry
