--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2010-11-20 Kai Heitkamp <dynup@ymail.com>
   * Transfer DVD to a specific image file
+  * Cover region bug fixed
 
 2010-11-19 Kai Heitkamp <dynup@ymail.com>
   * Download titles from wiitdb.com
