Update titles for Mac OS X fixed, version to 0.8.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
+2010-11-23 Kai Heitkamp <dynup@ymail.com>
+ Version 0.8.1
+  * Update titles for Mac OS X fixed
+
 2010-11-22 Kai Heitkamp <dynup@ymail.com>
+ Version 0.8
   * Tool tips for name/title fixed
   * Update titles after language change
   * Tool tips for name/title
