Update titles fixed, version to 0.8.2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2010-11-23 Kai Heitkamp <dynup@ymail.com>
+ Version 0.8.2
+  * Update titles fixed
  Version 0.8.1
   * Update titles for Mac OS X fixed
 
