--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2010-11-25 Kai Heitkamp <dynup@ymail.com>
+ Version 0.8.4
+  * Settings ui widget names fixed
+
  Version 0.8.3
   * Transfer to image fixed
   * WBFS repair options fixed
