--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+  * Double click on game shows infos
+
 2010-11-25 Kai Heitkamp <dynup@ymail.com>
  Version 0.8.5
   * WBFS repair default options fixed
