--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2010-11-27 Kai Heitkamp <dynup@ymail.com>
+  * Proxy support for cover and title download
   * Double click on game shows infos
 
 2010-11-25 Kai Heitkamp <dynup@ymail.com>
