Shortcuts added, game list header settings fixed

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2010-12-01 Kai Heitkamp <dynup@ymail.com>
+  * Shortcuts added
   * View game infos in browser
   * Transfer infos for log
   * UTF-8 support improved
