--- a/ChangeLog
+++ b/ChangeLog
@@ -1,21 +1,19 @@
-2010-12-02 Kai Heitkamp <dynup@ymail.com>
+2010-12-06 Kai Heitkamp <dynup@ymail.com>
+ Version 0.9
   * Cancel possibility for loading games process
   * Progress infos while loading games
   * Localization for dates
-  * WBFS used blocks sorting fixed
+  * UTF-8 support
   * Shortcuts added
   * View game infos in browser
   * Transfer infos for log
-  * UTF-8 support improved
-  * Settings adapted
-  * All transfer routines re-written
-
-2010-11-28 Kai Heitkamp <dynup@ymail.com>
-  * Transfer DVD to file system (fst)
+  * All transfer routines rewritten
+  * Support for file system (fst)
+    (At this time not for WBFS!)
   * Support for Wii ISO Archive (wia) format
-  * WBFS transfer image dialog fixed
-  * UTF-8 support
+    (At this time not for WBFS!)
   * Proxy support for cover and title download
+    (Caution: Password will be saved plain in config!)
   * Double click on game shows infos
 
 2010-11-25 Kai Heitkamp <dynup@ymail.com>
