Extract image from image/WBFS (fst)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2010-12-06 Kai Heitkamp <dynup@ymail.com>
+2010-12-08 Kai Heitkamp <dynup@ymail.com>
  Version 0.9 (wit v1.23a.beta5)
   * WIT command line for log (via settings)
   * Cancel possibility for loading games process
@@ -9,7 +9,7 @@
   * View game infos in browser
   * Transfer infos for log
   * All transfer routines rewritten
-  * Support for extract to file system (fst)
+  * Extract image from image/WBFS
   * Support for Wii ISO Archive (wia) format
   * Proxy support for cover and title download
     (Caution: Password will be saved plain in config!)
