--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
-2010-12-09 Kai Heitkamp <dynup@ymail.com>
- Version 0.9 (wit v1.23a.beta5)
+2010-12-11 Kai Heitkamp <dynup@ymail.com>
+ Version 0.9 (wit v1.23a-r2092)
   * Compare Files <-> WBFS game lists
   * Verify game images/DVD/WBFS
   * WIT command line for log (via settings)
