--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2010-12-11 Kai Heitkamp <dynup@ymail.com>
  Version 0.9 (wit v1.23a-r2092)
+  * Shows selection count beside ID
   * Game list selection mode via settings
   * Compare Files <-> WBFS game lists
   * Verify game images/DVD/WBFS
