--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 2010-12-12 Kai Heitkamp <dynup@ymail.com>
- Version 0.9 (wit v1.23a-r2092)
+ Version 0.9 (wit v1.23b-r2096)
   * Aqua or brushed metal style for Mac OS X
   * Shows selection count beside ID
   * Game list selection mode via settings
