--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
-2010-12-18 Kai Heitkamp <dynup@ymail.com>
+2010-12-19 Kai Heitkamp <dynup@ymail.com>
  Version 1.0 (wit v1.23b-r2096)
+  * Support for log file
   * Load game images improved
   * Support for image splitting
   * Diff for images after transfer
