German translation for Files/Load progress output

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
-2010-12-20 Kai Heitkamp <dynup@ymail.com>
- Version 1.0 (wit v1.23b-r2096)
+2010-12-23 Kai Heitkamp <dynup@ymail.com>
+ Version 1.0 (v1.24a r2114)
   * German translation
   * Scalable full HQ cover
   * Support for log file
