French translation added

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
-2010-12-28 Kai Heitkamp <dynup@ymail.com>
+2010-12-30 Kai Heitkamp <dynup@ymail.com>
  Version 1.0 (v1.24a r2114)
+  * French translation
   * German translation
   * Scalable full HQ cover
   * Support for log file
