WBFS dump for analysis

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
-2010-12-30 Kai Heitkamp <dynup@ymail.com>
+2010-12-31 Kai Heitkamp <dynup@ymail.com>
  Version 1.0 (v1.24a r2114)
   * French translation
   * German translation
+  * WBFS dump for analysis
   * Scalable full HQ cover
   * Support for log file
   * Load game images improved
