--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 2011-01-01 Kai Heitkamp <dynup@ymail.com>
- Version 1.0 (v1.24a r2114)
+ Version 1.0 (wit v1.24a r2114)
   * Norwegian translation
   * French translation
   * German translation
