Autosearch path to wit and titles improved, set path for titles via settings

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-01-04 Kai Heitkamp <dynup@ymail.com>
+ Version 1.0.1 (wit v1.24a r2114)
+  * Set path for titles via settings
+  * Autosearch path to wit and titles improved
+
 2011-01-01 Kai Heitkamp <dynup@ymail.com>
  Version 1.0 (wit v1.24a r2114)
   * Norwegian translation
