--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
-2011-01-04 Kai Heitkamp <dynup@ymail.com>
- Version 1.0.1 (wit v1.24a r2114)
+2011-01-10 Kai Heitkamp <dynup@ymail.com>
+ Version 1.1 (wit v1.25a r2133)
+  * Progress infos in main window title on mac
+  * Extract DVD progress infos adapted to new wit
+  * Transfer DVD to image progress infos adapted to new wit
+  * Extract files progress infos adapted to new wit
+  * Transfer files to image progress infos adapted to new wit
+  * Progress infos while loading games adapted to new wit
   * Set path for titles via settings
   * Autosearch path to wit and titles improved
 
