--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
-2011-01-14 Kai Heitkamp <dynup@ymail.com>
+2011-01-16 Kai Heitkamp <dynup@ymail.com>
  Version 1.1 (wit v1.25b r2143)
-  * Edit game images
+  * Patch game while transfer (image->WBFS, image->image, image->extract)
+  * Patch game image
   * Progress infos in main window title on mac
   * Extract DVD progress infos adapted to new wit
   * Transfer DVD to image progress infos adapted to new wit
