--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
-2011-01-26 Kai Heitkamp <dynup@ymail.com>
+2011-01-27 Kai Heitkamp <dynup@ymail.com>
  Version 1.1 (wit v1.26a.beta6 r2209)
   * Dutch translation
   * Spanish translation
+  * WBFS extract supports more than one game
   * Patch game image or while transfer
   * Progress infos in main window title on mac
   * Progress infos while transfer adapted to new wit
