Compare Files <-> WBFS fixed

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 2011-01-27 Kai Heitkamp <dynup@ymail.com>
- Version 1.1 (wit v1.26a.beta6 r2209)
+ Version 1.1 (wit v1.26a r2223)
   * Dutch translation
   * Spanish translation
   * WBFS extract supports more than one game
