New language system

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
-2011-01-27 Kai Heitkamp <dynup@ymail.com>
+2011-02-05 Kai Heitkamp <dynup@ymail.com>
  Version 1.1 (wit v1.26a r2223)
+  * New language system
   * Dutch translation
   * Spanish translation
   * WBFS extract supports more than one game
