--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
-2011-06-08 Kai Heitkamp <dynup@ymail.com>
+2011-07-17 Kai Heitkamp <dynup@ymail.com>
  Version 1.1 (wit v1.29a r2655)
+  * Switch to GNU GPLv3
   * New language system
   * Wia compression defaults fixed
   * Load 3D cover icon fixed
