French and norwegian translations added, wit to v2.00b r2855 updated

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 2011-07-17 Kai Heitkamp <dynup@ymail.com>
- Version 1.1 (wit v1.29a r2655)
+ Version 1.1 (wit v2.00b r2855)
   * Switch to GNU GPLv3
   * New language system
   * Wia compression defaults fixed
