--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-06-28 Kai Heitkamp <dynup@ymail.com>
+ Version 2.0 (wit v2.20a r4399)
+  * New modern GUI
+
 2011-07-17 Kai Heitkamp <dynup@ymail.com>
  Version 1.1 (wit v2.00b r2855)
   * Switch to GNU GPLv3
