Source path of game image in transfer dialog as default

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2013-06-28 Kai Heitkamp <dynup@ymail.com>
  Version 2.0 (wit v2.20a r4399)
+  * Source path of game image in transfer dialog as default
   * New modern GUI
 
 2011-07-17 Kai Heitkamp <dynup@ymail.com>
